RESOLVED FIXED 250622
[WebRTC] Fix -Wunused-but-set-variable warnings in the libwebrtc project
https://bugs.webkit.org/show_bug.cgi?id=250622
Summary [WebRTC] Fix -Wunused-but-set-variable warnings in the libwebrtc project
David Kilzer (:ddkilzer)
Reported 2023-01-14 09:02:48 PST
Fix -Wunused-but-set-variable warnings in the libwebrtc project: Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_sps_parser.cc:60:12: error: variable 'golomb_ignored' set but not used [-Werror,-Wunused-but-set-variable] uint32_t golomb_ignored; ^ Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_pps_parser.cc:89:12: error: variable 'bits_tmp' set but not used [-Werror,-Wunused-but-set-variable] uint32_t bits_tmp; ^ Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_pps_parser.cc:90:12: error: variable 'golomb_ignored' set but not used [-Werror,-Wunused-but-set-variable] uint32_t golomb_ignored; ^
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-14 09:03:57 PST
David Kilzer (:ddkilzer)
Comment 2 2023-01-14 09:09:13 PST
EWS
Comment 3 2023-01-16 08:59:24 PST
Committed 258956@main (d9cd0e72ca7c): <https://commits.webkit.org/258956@main> Reviewed commits have been landed. Closing PR #8658 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.