[WebRTC] Fix -Wunused-but-set-variable warnings in the libwebrtc project https://bugs.webkit.org/show_bug.cgi?id=250622 <rdar://104261631>

Reviewed by Youenn Fablet.

* Source/ThirdParty/libwebrtc/Configurations/Base.xcconfig:
(WK_FIXME_WARNING_CFLAGS):
- Remove -Wno-unused-but-set-variable.
* Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_pps_parser.cc:
- Add empty statements for bits_tmp and golomb_ignored
  variables.
* Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_sps_parser.cc:
- Add empty statement for golomb_ignored variable.
* Source/ThirdParty/libwebrtc/WebKit/libwebrtc-fix-Wunused-but-set-variable.diff: Add.

Canonical link: https://commits.webkit.org/258956@main